--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,6 +9,11 @@
     path: /etc/apt/sources.list.d/pve-enterprise.list
     state: absent
 
+- name: Remove CEPH enterprise repo from apt
+  ansible.builtin.file:
+    path: /etc/apt/sources.list.d/ceph.list
+    state: absent
+
 - name: Add Proxmox VE no subscription repo
   ansible.builtin.apt_repository:
     filename: pve-no-subscription
